# galaxy-parser-for-misp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING_DCO.md  LICENSE  README.md  pyproject.toml  setup.cfg
data/: config.ini.template
src/galaxy_parser/: __init__.py  discerner.py  exceptions.py  galaxy.py
tests/: test_discerner.py  test_galaxy.py  test_module.py
