[metadata]
name = misp-galaxy-parser
version = 0.1.1
author = Stefano Ortolani
description = Set of utilities to parse and use MISP galaxy clusters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vmware-labs/galaxy-parser-for-misp/
project_urls =
    Bug Tracker = https://github.com/vmware-labs/galaxy-parser-for-misp/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests
    tqdm
scripts =
    bin/query_galaxy.py
    bin/update_cluster_tags.py

[options.extras_require]
misp = pymisp

[options.packages.find]
where = src
